# reportfy

./: .gitignore  Dockerfile  README.md  action.yml  developers.json.example  pyproject.toml  requirements.txt
.github/workflows/: generate-report.yml  publish.yml  send-messages.yml
reportfy/: __init__.py  __main__.py  cli.py
reportfy/ai/: __init__.py  prompts.py  summarizer.py
reportfy/controllers/: __init__.py  base.py  collaboration_controller.py  developer_controller.py  organization_controller.py  report_controller.py  repository_controller.py  team_controller.py
reportfy/core/: __init__.py  config.py  fetcher.py
reportfy/models/: __init__.py  collaboration.py  developer.py  issue.py  organization.py  repository.py  team.py
reportfy/notifications/: __init__.py  discord_client.py
reportfy/notifications/senders/: __init__.py  base_sender.py  competence_sender.py  developer_sender.py  project_sender.py  team_weekly_sender.py  teams_general_sender.py
reportfy/utils/: periods.py
reportfy/views/: __init__.py  base.py  collaboration_view.py  developer_view.py  organization_view.py  repository_view.py  team_view.py
tests/: conftest.py  test_collaboration_model.py  test_controllers.py  test_developer_model.py  test_issue_model.py  test_organization_model.py  test_summarizer.py  test_views.py
